plugins {
	id 'java'
	id "jacoco"
	id 'org.springframework.boot' version '3.4.2'
	id 'io.spring.dependency-management' version '1.1.7'
	id "org.sonarqube" version "6.0.1.5171"
}

group = 'propensi'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

sonar {
  properties {
    property "sonar.projectKey", "amerta-backend"
	property "sonar.projectName", "amerta-backend"
    property "sonar.host.url", "https://sonarqube.cs.ui.ac.id"
	property "sonar.coverageReportPaths", "build/reports/tests/test/index.html"
  }
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation ('com.github.javafaker:javafaker:1.0.2'){
		exclude group:'org.yaml',module:'snakeyaml'
	}
	implementation 'jakarta.xml.bind:jakarta.xml.bind-api-parent:4.0.2'
	implementation 'org.glassfish.jaxb:jaxb-runtime:4.0.5'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
	implementation 'org.postgresql:postgresql'
	runtimeOnly 'org.postgresql:postgresql'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
}

tasks.test {
   useJUnitPlatform()
   finalizedBy(tasks.jacocoTestReport) // report is always generated after tests run
}

tasks.jacocoTestReport {
   afterEvaluate {
       classDirectories.setFrom(files(classDirectories.files.collect {
           fileTree(dir: it, exclude: ['**/*Application**'])
       }))
   }
   dependsOn(tasks.test) // tests are required to run before generating the report
   reports {
       xml.required.set(true)
       csv.required.set(true)
       html.required.set(true)
   }
}